--- a/www/src/style.css
+++ b/www/src/style.css
@@ -1,3 +1,13 @@
 body {
   background: #1f2639;
 }
+
+#train {
+  position: absolute;
+  top: 0;
+  margin: 15px;
+}
+
+#viewport {
+  border: 2px solid #fff;
+}
